--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
-    "@netlify/blobs": "^6.3.0"
-  }
+    "@netlify/blobs": "^6.3.0",
+    "@supabase/supabase-js": "^2.57.4"
+  },
+  "name": "mapped",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
